# public/swagger.json
@@ -36,12 +36,17 @@
 					"title": {
 						"type": "string"
 					},
+					"console_id": {
+						"type": "number",
+						"format": "double"
+					},
 					"console": {
 						"$ref": "#/components/schemas/ConsoleDTO"
 					}
 				},
 				"required": [
-					"title"
+					"title",
+					"console_id"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -81,6 +86,36 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateGame",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GameDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GameDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/games/{id}": {
