# src/controllers/game.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Route, Tags, Path } from "tsoa";
+import { Body, Controller, Get, Post, Route, Tags, Path } from "tsoa";
 import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
 
@@ -13,5 +13,14 @@ export class GameController extends Controller {
   @Get("{id}")
   public async getGameById(@Path() id: number): Promise<GameDTO | null> {
     return gameService.getGameById(id);
+  }
+
+  // Crée un nouveau jeu
+  @Post("/")
+  public async createGame(
+    @Body() requestBody: GameDTO
+  ): Promise<GameDTO> {
+    const { title, console_id } = requestBody;
+    return gameService.createGame(title, console_id);
   }
 }
